tests/ui/column_borrow.stderr
error[E0499]: cannot borrow `*r` as mutable more than once at a time
  --> tests/ui/column_borrow.rs:9:28
   |
8  |             let mut col1 = r.col(0);
   |                            -------- first mutable borrow occurs here
9  |             let mut col2 = r.col(1);
   |                            ^^^^^^^^ second mutable borrow occurs here
10 |             assert_ne!(col1.get_str()?, col2.get_str()?);
   |                        -------------- first borrow later used here
